[package]
name = "gourlshort"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
surrealdb = "1.5.4"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
